fix for info overlap

--- a/webroot/sites/all/modules/custom/idea_act/css/style.css
+++ b/webroot/sites/all/modules/custom/idea_act/css/style.css
@@ -112,7 +112,7 @@ canvas{
  .idea-container .info-icon {
 	 position: absolute;
 	 top: 1rem;
-	 right: 1rem;
+	 right: -1rem;
 	 z-index: 9;
 }
  .idea-container .relative-position {
@@ -549,10 +549,4 @@ canvas{
 	#chartjs-tooltip td {
 		white-space: nowrap; 
 	}
-}
-
-@media only screen and (min-width: 1301px) {
-	.idea-container .info-icon {
-		right: -1rem !important;
-   }
 }
